Auth complete logic
